tests/baselines/reference/duplicatePropertyNames.errors.txt
==== tests/cases/compiler/duplicatePropertyNames.ts (11 errors) ====
    // duplicate property names are an error in all types
    
    interface Number {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(5,5): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	duplicatePropertyNames.ts(4,5)
    }
    
    interface String {
        foo(): string;
        foo(): string;
        ~~~~~~~~~~~~~
!!! duplicatePropertyNames.ts(10,5): error TS2144: Duplicate overload signature for 'foo'.
    }
    
    interface Array<T> {
        foo: T;
        foo: T;
        ~~~
!!! duplicatePropertyNames.ts(15,5): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	duplicatePropertyNames.ts(14,5)
    }
    
    class C {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(20,5): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	duplicatePropertyNames.ts(19,5)
    
        bar(x) { }
        bar(x) { }
        ~~~~~~~~~~
!!! duplicatePropertyNames.ts(23,5): error TS2000: Duplicate identifier 'bar'. Additional locations:
!!! 	duplicatePropertyNames.ts(22,5)
    
        baz = () => { }
        baz = () => { }
        ~~~
!!! duplicatePropertyNames.ts(26,5): error TS2000: Duplicate identifier 'baz'. Additional locations:
!!! 	duplicatePropertyNames.ts(25,5)
    }
    
    interface I {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(31,5): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	duplicatePropertyNames.ts(30,5)
    }
    
    var a: {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(36,5): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	duplicatePropertyNames.ts(35,5)
    
        bar: () => {};
        bar: () => {};
        ~~~
!!! duplicatePropertyNames.ts(39,5): error TS2000: Duplicate identifier 'bar'. Additional locations:
!!! 	duplicatePropertyNames.ts(38,5)
    }
    
    var b = {
        foo: '',
        foo: '',
        ~~~~~~~
!!! duplicatePropertyNames.ts(44,5): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	duplicatePropertyNames.ts(43,5)
        bar: () => { },
        bar: () => { }
        ~~~~~~~~~~~~~~
!!! duplicatePropertyNames.ts(46,5): error TS2000: Duplicate identifier 'bar'. Additional locations:
!!! 	duplicatePropertyNames.ts(45,5)
    }
    